TK_30: Deleted the exceptions